Added function to run test image for consistency

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,7 @@ find_package(OpenCV REQUIRED)
 
 set (CMAKE_CXX_FLAGS "-L/usr/local/frc/lib -lntcore -I/usr/local/frc/include -lraspicam -lraspicam_cv -I/home/pi/raspicam-0.1.6/src")
 
-add_executable( VisionProcessing VisionProcessing.cpp Processing.cpp CameraWrapper.cpp OffBoardComms.cpp)
+add_executable( VisionProcessing VisionProcessing.cpp ProcessingCargo.cpp CameraWrapper.cpp OffBoardComms.cpp)
 #target_link_libraries( VisionTest ${/usr/local/frc/lib/})
 #target_link_libraries( VisionTest ${/usr/local/frc/lib})
 target_link_libraries(VisionProcessing ${OpenCV_LIBS})
