--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 vc41.pdb
 *.suo
 *.bak
+*.opendb
+*.jpg
 
 # Compiled Object files
 *.slo
@@ -51,3 +53,4 @@ src/.vscode/c_cpp_properties.json
 src/.vscode/tasks.json
 src/moveOutputImages.cmd
 Vision2019.code-workspace
+.vs/Vision 2019/v15/Browse.VC.opendb
